--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,45 +20,71 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="card-box text-center">
                     <div class="user-pic">
 <!--                        <img src="${gameType.lotto}" class="img-fluid" alt="">-->
-                        <img src="https://www.lotto.pl/cdn/c78b763d8bd1b9b49e4d52ed3d952f63.svg" class="img-fluid" alt="">
+                        <img src="https://www.lotto.pl/cdn/d042cbcb2df860f1ad64ce2321cc00c1.svg" class="img-fluid" alt="">
                     </div>
                     <h4>Lotto</h4>
                     <hr>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    <hr>
-                    <a href="#" class="btn btn-primary">Know More</a>
+                    <p th:text="${Lotto.numbers} ?: '???'"></p>
+<!--                    <h6><span th:text="${Lotto.gameType} ?: 'a'"></span></h6>-->
+<!--                    <h6 th:text="${#objects.nullSafe(Lotto,'lotto')}"></h6>-->
+                    <a href="/getLastResult/Lotto" class="btn btn-primary">Aktualne wyniki</a>
+
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="card-box text-center">
                     <div class="user-pic">
-                        <img src="/images/user-img-2.jpg" class="img-fluid" alt="User Pic">
+                        <img src="https://www.lotto.pl/cdn/58cdcf2db4965d22e2e8243d5a1eecfe.svg" class="img-fluid" alt="User Pic">
                     </div>
-                    <h4>Satyam Tiwari</h4>
-                    <h6>Web Developer</h6>
+                    <h4>Mini Lotto</h4>
                     <hr>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <p th:text="${MiniLotto.numbers} ?: '???'"></p>
                     <hr>
-                    <a href="#" class="btn btn-primary">Know More</a>
+                    <a href="/getLastResult/MiniLotto" class="btn btn-primary">Aktualne wyniki</a>
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="card-box text-center">
                     <div class="user-pic">
-                        <img src="/images/user-img-3.jpg" class="img-fluid" alt="User Pic">
+                        <img src="https://www.lotto.pl/cdn/0146a9520554de0c5ae63d7f07137d8f.svg" class="img-fluid" alt="User Pic">
                     </div>
-                    <h4>Salim Malik</h4>
-                    <h6>Front End Developer</h6>
+                    <h4>Kaskada</h4>
                     <hr>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <p th:text="${Kaskada.numbers} ?: '???'"></p>
                     <hr>
-                    <a href="#" class="btn btn-primary">Know More</a>
+                    <a href="/getLastResult/Kaskada" class="btn btn-primary">Aktualne wyniki</a>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card-box text-center">
+                    <div class="user-pic">
+                        <img src="https://www.lotto.pl/cdn/1c311b9642bfec590cb1b6f27ced3d0e.svg" class="img-fluid" alt="User Pic">
+                    </div>
+                    <h4>Multi Multi</h4>
+                    <hr>
+                    <p th:text="${MultiMulti.numbers} ?: '???'"></p>
+                    <hr>
+                    <a href="/getLastResult/MultiMulti" class="btn btn-primary">Aktualne wyniki</a>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card-box text-center">
+                    <div class="user-pic">
+                        <img src="https://www.lotto.pl/cdn/5d790d484336d64a5ca504fcf4ea19d2.svg" class="img-fluid" alt="User Pic">
+                    </div>
+                    <h4>Eurojackpot</h4>
+                    <hr>
+                    <p th:text="${Eurojackpot.numbers} ?: '???'"></p>
+                    <hr>
+                    <a href="/getLastResult/Eurojackpot" class="btn btn-primary">Aktualne wyniki</a>
                 </div>
             </div>
         </div>
